# nada-dsl

./: .gitignore  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.pyproject.md  README.rst  __init__.py  circuit_io.py  compiler_frontend.py  compiler_frontend_test.py  doc.json  draft_space.py  operations.py  pyproject.toml  setup.py  source.json  source_ref.py  util.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  nada-dsl.yml  publish.yml
docs/: Makefile  conf.py  index.rst  toc.rst
docs/_source/: nada_dsl.audit.abstract.rst  nada_dsl.audit.report.rst  nada_dsl.audit.rst  nada_dsl.audit.strict.rst  nada_dsl.circuit_io.rst  nada_dsl.compile.rst  nada_dsl.compiler_frontend.rst  nada_dsl.nada_types.rst  nada_dsl.operations.rst  nada_dsl.source_ref.rst
future/: __init__.py  operations.py
future/nada_types/: collections.py  function.py  generics.py  integer.py  unsigned_integer.py
nada_dsl/: __init__.py  ast_util.py  audit_strict_test.py  circuit_io.py  compile.py  compile_test.py  compile_v2.py  compile_v2_test.py  compiler_frontend.py  compiler_frontend_generated_test.py  compiler_frontend_test.py  compiler_frontend_test_generated.py  compiler_frontend_v2.py  compiler_frontend_v2_test.py  errors.py  operations.py  program_io.py  scalar_type_test.py  source_ref.py  timer.py  version.py
nada_dsl/audit/: __init__.py  __main__.py  abstract.py  common.py  report.py  strict.py
nada_dsl/future/: operations.py
nada_dsl/nada_types/: __init__.py  boolean.py  collections.py  function.py  generics.py  integer.py  rational.py  scalar_types.py  string.py  types.py  unsigned_integer.py
nada_mir/: MANIFEST.in  README.md  pyproject.toml
nada_mir/proto/nillion/nada/v1/: mir.proto  operations.proto  types.proto
nada_mir/scripts/: gen_proto.sh
nada_mir/src/nada_mir_proto/nillion/nada/mir/v1/: __init__.py
nada_mir/src/nada_mir_proto/nillion/nada/operations/v1/: __init__.py
nada_mir/src/nada_mir_proto/nillion/nada/types/v1/: __init__.py
nada_types/: __init__.py  boolean.py  collections.py  float.py  function.py  generics.py  integer.py  rational.py  string.py  unsigned_integer.py
scripts/: build_virtualenv.sh  generate_circuit.sh  release_notes.py  version_checker.py
test-programs/: doc.json  document.py  lib.py  map_simple.py  mir.json  multiple_operations.py  nada_fn_literal.py  ntuple_accessor.py  object_accessor.py  sum_integers.py
tests/: audit_strict_test.py  compile_test.py  compiler_frontend_test.py  nada_type_test.py  scalar_type_test.py  source_ref.py
