[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nada_dsl"
version = "0.8.0rc2"
description = "Nillion Nada DSL to create Nillion MPC programs."
requires-python = ">=3.10"
readme = "README.pyproject.md"
dependencies = [
    "asttokens~=2.4",
    "richreports~=0.2",
    "parsial~=0.1",
    "sortedcontainers~=2.4",
    "typing_extensions~=4.12.2",
    "nada-mir-proto==0.2.0rc1",
    "types-protobuf~=5.29"
]
classifiers = ["License :: OSI Approved :: Apache Software License"]
license = { file = "LICENSE" }

[project.optional-dependencies]
docs = ["toml~=0.10.2", "sphinx>=5,<9", "sphinx-rtd-theme>=1.0,<3.1", "sphinx-autoapi~=3.3.2"]
test = ["pytest>=7.4,<9.0", "pytest-cov>=4,<7"]
lint = ["pylint>=2.17,<3.4"]

[tool.setuptools]
packages = ["nada_dsl", "nada_dsl.audit", "nada_dsl.future", "nada_dsl.nada_types"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=nada_dsl --cov-report term-missing"

[tool.uv]
dev-dependencies = [
    "toml~=0.10.2",
    "sphinx>=5,<9",
    "sphinx-rtd-theme>=1.0,<3.1",
    "sphinx-autoapi~=3.3.2",
    "pytest>=7.4,<9.0",
    "pytest-cov>=4,<7",
    "pylint>=2.17,<3.4",
    "nada-mir-proto[dev]",
    "tomli>=2.2.0",
    "requests>=2.32.3",
    "typing_extensions~=4.12.2",
    "ruff>=0.8.0"
]

[tool.uv.sources]
nada-mir-proto = { workspace = true }

[tool.uv.workspace]
members = ["nada_mir"]
