[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nada-mir-proto"
version = "0.2.0rc1"
description = "The protocol buffers representation of the Nada MIR."
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "betterproto==2.0.0b7",
    "pydantic==2.10.3"
]

[tool.uv]
dev-dependencies = [
    "grpcio-tools==1.62.3"
]

[project.optional-dependencies]
dev = ["betterproto[compiler]==2.0.0b7"]
protoc = ["grpcio-tools==1.62.3"]
